modified mobile version

--- a/Mahavir_Mandir.html
+++ b/Mahavir_Mandir.html
@@ -53,6 +53,8 @@
         </div>
     </header>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
     <div class="head">
         <div><h1>City of historical and cultural importance!</h1></div>
         <div>
