--- a/Patna_Museum.html
+++ b/Patna_Museum.html
@@ -65,6 +65,8 @@
         </div>
     </div>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
     <div class="content">
         <h1>Patna Museum</h1>
         Patna museum is one of the oldest museums in India. It was established in 1917 by the then Governor of Bihar, Sir Edward Gait. The museum is located in the heart of the city of Patna, the capital of Bihar. The museum has a rich collection of artefacts ranging from the prehistoric to the modern times. The museum also houses a rare collection of coins, pottery, weapons, sculptures, paintings and textiles.
