--- a/Patna_Planetarium.html
+++ b/Patna_Planetarium.html
@@ -65,6 +65,8 @@
         </div>
     </div>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
     <div class="content">
         <h1>Patna Planetarium</h1>
         Patna Planetarium is a state-of-the-art planetarium located in the heart of the city of Patna, the capital of the Indian state of Bihar. It is one of the largest planetariums in Asia and the only one in India with a Digistar 5 system, the latest in planetarium technology. The planetarium was inaugurated by the then Chief Minister of Bihar, Nitish Kumar, on August 15, 2013.
