--- a/heritage.html
+++ b/heritage.html
@@ -86,6 +86,8 @@
         </div>
     </header>
 
+        <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
         <h1>Heritage Places in Patna</h1>
         <div class="image-container">
             <div>
