--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Tourism Website</title>
 </head>
-
+<script></script>
 <body>
     <header>
         <div class="nav-container">
@@ -28,6 +28,7 @@
             </div>
         </div>
     </header>
+        <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
         <div class="home">
             <div><h1>City of historical and cultural importance!</h1></div>
             <div>
