--- a/Chotaimambara.html
+++ b/Chotaimambara.html
@@ -65,6 +65,8 @@
         </div>
     </div>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
     <div class="content">
         <h1>Chota Imambara</h1>
         <p>
