--- a/Khuda_Baksh_Oriental_Library.html
+++ b/Khuda_Baksh_Oriental_Library.html
@@ -65,6 +65,8 @@
         </div>
     </div>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
     <div class="content">
     <h1>Khuda Baksh Oriental Library</h1>
     <p>
