--- a/Mahatma_Gandhi_Setu.html
+++ b/Mahatma_Gandhi_Setu.html
@@ -65,6 +65,8 @@
         </div>
     </div>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
+
     <div class="content">
         <h1>Mahatma Gandhi Setu</h1>
         Mahatma Gandhi Setu, also known as Gandhigram Setu, is a bridge over the river Ganges in Patna, the capital of the Indian state of Bihar. It is one of the longest river bridges in the world. The bridge is named after Mahatma Gandhi, the Father of the Nation. It was inaugurated by then Prime Minister of India, Indira Gandhi on 10 May 1982. The bridge links Patna on the south bank of the Ganges with Hajipur on the north bank. The total length of the bridge is 5,750 metres (18,860 ft) and it is the second-longest cantilever bridge in the world.
