--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,9 @@
     <title>Gallery</title>
 </head>
 <style>
+
+
+
     .flex {
         display: flex;
         flex-wrap: wrap;
@@ -81,6 +84,7 @@
         </div>
     </header>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
     <h1>Gallery</h1>
     <div class="flex">
         <div><img src="img/img1.jpg" alt=""></div>
