--- a/hotel.html
+++ b/hotel.html
@@ -186,6 +186,7 @@
         </div>
     </header>
 
+    <div id="hamburger"><img src="img/hamburger_menu.png" alt=""></div>
     <div class="form-container">
         <h2>Hotel Booking</h2>
         <p>Fill in the form below to book a hotel.</p>
