--- a/hotel.html
+++ b/hotel.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Hotel Booking</title>
+<link href='https://fonts.googleapis.com/css2?family=Josefin+Sans' rel='stylesheet'>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
